Additions to previous discussion notebooks

--- a/Notebooks/Object-Oriented Programming.ipynb
+++ b/Notebooks/Object-Oriented Programming.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "\"Jack's Chair\""
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,8 +55,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Additional notes:\n",
+    "The first argument that we pass into a class function is always an instance of the class, i.e., an object. It is a common convention to name the object `self`. The variables associated with the object are referenced using the notation `self.variable_name`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +73,7 @@
        "[\"Jack's Chair\", \"Pat's Chair\"]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +125,7 @@
     "        else:\n",
     "            self.is_reclined = False\n",
     "            print(\"Not a reclining chair. Can't recline.\")\n",
+    "# File handling\n",
     "x = open(\"chairs.csv\",\"r\")\n",
     "office_chairs = list()\n",
     "for line in x:\n",
