--- a/Notebooks/Python101.ipynb
+++ b/Notebooks/Python101.ipynb
@@ -22,7 +22,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "1.0"
       ]
      },
      "execution_count": 1,
@@ -31,27 +31,16 @@
     }
    ],
    "source": [
-    "1+2"
+    "4/4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello world'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"Hello world\" # Single line comment using (#). Any unassigned string is a comment in python"
+    "a = \"Hello world\" # Single line comment using (#). Any unassigned string is a comment in python"
    ]
   },
   {
@@ -69,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nMultiline comments using triple parantheses\\n'"
+       "'\\nMultiline comments using triple parantheses\\nThis is a comment.\\n'"
       ]
      },
      "execution_count": 3,
@@ -81,6 +70,7 @@
     "print(\"Hello world\")\n",
     "\"\"\"\n",
     "Multiline comments using triple parantheses\n",
+    "This is a comment.\n",
     "\"\"\""
    ]
   },
@@ -261,12 +251,12 @@
     "    [4,2,5]\n",
     "] # list within a list can be used to form an array of two or more dimensions\n",
     "# looping is simply defined as follows on such and similar data types\n",
-    "for row in array: # the syntax is [for <looping_variable> in <iterable_datatype>:] Here row (list) is the iterable datatype\n",
+    "for r in array: # the syntax is [for <looping_variable> in <iterable_datatype>:] Here row (list) is the iterable datatype\n",
     "    # grouped data are usually iterable datatypes but some custom datatype may not be so.\n",
-    "    print(\"Row:\",row) # indentation (4 spaces to the left of loop is the syntax for the block of code in the looping structure)\n",
+    "    print(\"Row:\",r) # indentation (4 spaces to the left of loop is the syntax for the block of code in the looping structure)\n",
     "    #another loop can be nested to access data of the row list\n",
-    "    for column in row: # nested loop over iterable row\n",
-    "        print(\"Element:\", column)"
+    "    for column in r: # nested loop over iterable row\n",
+    "        print(\"Element:\", column)\n"
    ]
   },
   {
@@ -357,6 +347,7 @@
     "    1:\"apple\",\n",
     "    (1,2):[1,2,3,4]\n",
     "}\n",
+    "xdict[(1,2)]\n",
     "# The keys of a dictionary may be accessed with dict.keys() and values may be accessed with dict.values()\n",
     "print(xdict.keys(),xdict.values()) \n",
     "for key,value in xdict.items():\n",
@@ -393,7 +384,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "129 µs ± 22.7 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "31.1 µs ± 6.08 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -415,7 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "186 µs ± 65.6 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "24.9 µs ± 3.28 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -439,7 +430,7 @@
     {
      "data": {
       "text/plain": [
-       "[12.622925275148745, 15.077724650182859, 13.512436569181759]"
+       "[3.5904057663373727, 2.5247945509044882, 2.8868300306744885]"
       ]
      },
      "execution_count": 15,
@@ -468,13 +459,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Running\n",
       "4\n",
+      "Running\n",
       "Apple and Android\n"
      ]
     }
    ],
    "source": [
     "def doth(parameter_x, parameter_y):\n",
+    "    print(\"Running\")\n",
     "    return parameter_x+parameter_y\n",
     "# Due to the dynamic type of variables in python, these functions can work with different types if the operations support it\n",
     "print(doth(1,3))\n",
@@ -497,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -567,15 +561,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number greater than 10: 11\n",
-      "Entry is valid.\n"
+      "Enter a number greater than 10: 1\n",
+      "Number entered is too low.\n"
      ]
     }
    ],
